# momentu

./: .ghci  .gitignore  .hlint.yaml  LICENSE  hie.yaml  momentu.cabal  package.yaml  stack.yaml  text-anim.show  weeder.dhall
examples/: choice.hs  dropdownlist.hs  hello-world.hs  searchmenu.hs  sys-info.hs  text-anim.hs  textedit.hs
src/Control/Monad/Reader/: Extended.hs
src/Data/: Property.hs
src/Data/List/Extended/: Momentu.hs
src/GUI/: Momentu.hs
src/GUI/Momentu/: Align.hs  Animation.hs  DataFiles.hs  DefaultEnv.hs  Direction.hs  Draw.hs  Element.hs  EventMap.hs  Font.hs  Glue.hs  Hover.hs  I18N.hs  Main.hs  MetaKey.hs  ModKey.hs  Render.hs  Responsive.hs  Scroll.hs  Setup.hs  State.hs  View.hs  Widget.hs  Window.hs  Zoom.hs
src/GUI/Momentu/Animation/: Engine.hs
src/GUI/Momentu/Element/: Id.hs
src/GUI/Momentu/Main/: Animation.hs  Config.hs  Events.hs
src/GUI/Momentu/Main/Events/: Loop.hs
src/GUI/Momentu/Responsive/: Expression.hs  Options.hs  TaggedList.hs
src/GUI/Momentu/Widget/: Events.hs  Id.hs  Instances.hs  Types.hs
src/GUI/Momentu/Widgets/: Choice.hs  Clickable.hs  Cursor.hs  DropDownList.hs  EventMapHelp.hs  FocusDelegator.hs  Grid.hs  GridView.hs  Label.hs  ListBox.hs  Menu.hs  StdKeys.hs  TextEdit.hs  TextView.hs
src/GUI/Momentu/Widgets/Menu/: Search.hs
src/GUI/Momentu/Widgets/TextEdit/: Property.hs
src/Graphics/UI/GLFW/: Utils.hs
test/: TestMain.hs
test/Test/Momentu/: Env.hs  Instances.hs  Prelude.hs
test/Tests/: Hover.hs  Momentu.hs  WidgetGlue.hs
